<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FollowTeam</string>
     <string-array name="optionsMenu">
        <item>Login</item>
        <item>Registrati</item>
        <item>Classifica</item>
        <item>News</item>
        <item>Calendario</item>
    </string-array>
      <string-array name="optionsMenuLogin">
        <item>Calendario</item>
        <item>Profilo</item>
        <item>News</item>
        <item>Classifica</item>
        <item>Logout</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="usernameLabel">Username</string>
    <string name="passwordLabel">Password</string>
    <string name="buttonLoginLabel">Login</string>
    <string name="passwordLabelConferma">ConfermaPassword</string>
    <string name="buttonRegistrati">Registrati</string>
	<string name="benvenutoLabel">Benvenuto</string>
	<string name="buttonModifica">Modifica profilo</string>
	<string name="buttonElimina">Elimina profilo</string>
	<string name="buttonConfermaModifica">Conferma modifiche</string>
	<string name="giornataLabel">Giornata </string>
	<string name="separatore"> - </string>
	<string name="buttonPercorsoLabel">Ricerca percorso</string>
	<string name="buttonAlloggioLabel">Ricerca alloggio</string>
	<string name="calendarioOfflineLabel">Registrati per le funzionalità aggiuntive!</string>
	<string name="controlloConnessione">Controlla la tua connessione a internet e riprova !</string>
	<string name="labelSquadra">Squadra : </string>
	<string name="labelLogo">Logo : </string>
	<string name="labelUsernameProfilo">Username :  </string>
	<string name="squadraPreferita">Squadra preferita  </string>
	
	
	
	
	
	
    
    
</resources>
