<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
	<LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_gravity="center" >
	
	    <EditText
	        android:id="@+id/usernameReg"
	        android:hint="@string/usernameLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="28dp"
	        android:ems="10"
	        android:inputType="textPersonName" 
	        style="@style/MyEditText">
	
	        <requestFocus />
	    </EditText>
	
	    <EditText
	        android:id="@+id/passwordReg"
	        android:hint="@string/passwordLabel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="23dp"
	        android:ems="10"
	        android:inputType="textPassword" 
	        style="@style/MyEditText"/>
	
	    <EditText
	        android:id="@+id/passwordConferma"
	        android:hint="@string/passwordLabelConferma"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="26dp"
	        android:ems="10"
	        android:inputType="textPassword" 
	        style="@style/MyEditText"/>
	
	    <Spinner
	        android:id="@+id/spinner"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="32dp"
	        android:drawSelectorOnTop="true" 
	        />
	
	    <Button
	        android:id="@+id/buttonRegistrazione"
	        android:layout_marginTop="53dp"
	        android:text="@string/buttonRegistrati"
	        android:layout_height="90dp"
	        android:layout_width="110dp"
	        style="@style/button"
	        android:layout_gravity="center" />
	
	</LinearLayout>
</ScrollView>
