<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/username"
        android:hint="@string/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp"
        android:ems="10"
        android:inputType="textPersonName" >

    </EditText>

    <EditText
        android:id="@+id/password"
        android:hint="@string/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/buttonLogin"
       	style="@style/button"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text="@string/buttonLoginLabel" />

</RelativeLayout>