<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        
	<LinearLayout 
	    android:id="@+id/LinearLayout2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:gravity="center_horizontal" >
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" 
			android:gravity="center_horizontal"
			android:layout_marginBottom="15dp"
			android:layout_marginTop="40dp"> 
	        <TextView
	            android:id="@+id/textViewUsernameProfilo"
	            android:layout_marginRight="30dp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/labelUsernameProfilo" />
	
	        <TextView
	            android:id="@+id/usernameProfilo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	             />
	
	    </LinearLayout>
	
	     <LinearLayout
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content" 
	          android:orientation="horizontal" 
			android:gravity="center_horizontal"
			android:layout_marginBottom="15dp">
	        <TextView
	            android:id="@+id/textViewNomeSquadra"
	            android:layout_marginTop="40dp"
	            android:layout_marginRight="30dp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/labelSquadra" />
	
	         <TextView
	             android:id="@+id/squadraProfilo"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             android:layout_marginTop="40dp"
	             android:text="@string/usernameLabel" />
	
	     </LinearLayout>
	
	     <LinearLayout
	         android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	          android:orientation="horizontal"
	          android:layout_marginBottom="15dp" 
			android:gravity="center_horizontal" >
	         
	         <TextView
	            android:id="@+id/textViewLogo"
	            android:layout_marginTop="63dp"
	            android:layout_marginRight="25dp"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/labelLogo" />
	
	         <ImageView
	             android:id="@+id/imageSquadraProfilo"
	             android:layout_width="63dp"
	             android:layout_height="106dp"
	             android:layout_marginTop="37dp"
	             android:src="@drawable/ic_launcher" />
	
	     </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:layout_marginBottom="15dp" >
	
	        <Button
	            android:id="@+id/buttonModificaProfilo"
	            style="@style/button"
	            android:layout_width="110dp"
	            android:layout_height="90dp"
	            android:layout_marginLeft="30dp"
	            android:minHeight="50dp"
	            android:text="@string/buttonModifica" />
	
	        <Button
	            android:id="@+id/buttonEliminaProfilo"
	            style="@style/button"
	            android:layout_width="110dp"
	            android:layout_height="90dp"
	            android:layout_marginLeft="50dp"
	            android:layout_marginRight="50dp"
	            android:text="@string/buttonElimina" />
	    </LinearLayout>
	
	</LinearLayout>
</ScrollView>